@@ -1,3 +1,15 @@
+2009-06-15  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        <rdar://problem/6967569>
+        CrashTracer: 15 crashes in Safari at com.apple.WebKit • WebKit::NetscapePluginHostManager::didCreateWindow + 85
+        
+        Make sure to remove the entry from the plug-in host map so we won't end up with an entry that has a null value.
+        
+        * Plugins/Hosted/NetscapePluginHostManager.mm:
+        (WebKit::NetscapePluginHostManager::hostForPackage):
+
 2009-06-15  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Tim Hatcher.
